<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/version" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/version" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#e1e1e1" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_disable_screen_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_screen_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/screen_lock_prevent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#e1e1e1" />

        <TextView
            android:drawableTint="@color/white"
            android:id="@+id/tv_share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_share"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/share_app" />

        <TextView
            android:id="@+id/tv_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_website"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/website" />


        <TextView
            android:id="@+id/tv_follow_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_twitter"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/follow_us" />


        <TextView
            android:id="@+id/tv_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_github"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/github" />


        <TextView
            android:id="@+id/tv_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_vertical"
            android:text="@string/rate_app" />





    </LinearLayout>
</ScrollView>