<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.main.DownloadFragment">


    <TextView
        android:id="@+id/tv_downloading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cairo_font"
        android:gravity="center_horizontal"
        android:text="@string/downloading_files"
        android:textColor="@color/colorOnBackground"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.ProgressIndicator
        android:id="@+id/progress_download"
        style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:progress="50"
        app:indicatorColor="@color/colorOnSecondary"
        app:indicatorCornerRadius="16dp"
        app:indicatorSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_downloading"
        app:trackColor="@color/colorOnBackground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_retry"
        android:textSize="18sp"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@id/progress_download"
        app:layout_constraintStart_toStartOf="@id/progress_download"
        app:layout_constraintTop_toBottomOf="@id/progress_download" />


    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quran_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sana_font"
        android:text="@string/app_name_ar"
        android:textColor="@color/colorOnBackground"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_splash" />

</androidx.constraintlayout.widget.ConstraintLayout>